--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "saas-starter",
   "version": "0.3.1",
   "private": true,
+  "engines": {
+    "node": ">=20.0.0"
+  },
   "author": {
     "name": "mickasmt",
     "url": "https://twitter.com/mickasmt"
